# TrackIt.Application/Features/Budgets/Queries/GetBudgetQueryHandler.cs
@@ -1,4 +1,5 @@
 using MediatR;
+using TrackIt.Application.DTOs;
 using TrackIt.Application.DTOs.Budgets;
 using TrackIt.Application.Interfaces;
 
@@ -7,10 +8,10 @@ namespace TrackIt.Application.Features.Budgets.Queries;
 /// <summary>
 ///     Обработчик запроса <see cref="GetBudgetQuery" />
 /// </summary>
-internal sealed class GetBudgetQueryHandler(IBudgetService service) : IRequestHandler<GetBudgetQuery, IEnumerable<BudgetDto>>
+internal sealed class GetBudgetQueryHandler(IBudgetService service) : IRequestHandler<GetBudgetQuery, PagedList<BudgetDto>>
 {
     /// <inheritdoc />
-    public async Task<IEnumerable<BudgetDto>> Handle(GetBudgetQuery request, CancellationToken cancellationToken)
+    public async Task<PagedList<BudgetDto>> Handle(GetBudgetQuery request, CancellationToken cancellationToken)
     {
         return await service.ListAsync(request, cancellationToken);
     }
