# TrackIt.Application/Features/Categories/Queries/GetCategoriesQueryHandler.cs
@@ -1,4 +1,5 @@
 using MediatR;
+using TrackIt.Application.DTOs;
 using TrackIt.Application.DTOs.Categories;
 using TrackIt.Application.Interfaces;
 
@@ -7,10 +8,10 @@ namespace TrackIt.Application.Features.Categories.Queries;
 /// <summary>
 ///     Обработчик запроса <see cref="GetCategoriesQuery" />
 /// </summary>
-internal sealed class GetCategoriesQueryHandlerHandler(ICategoryService service) : IRequestHandler<GetCategoriesQuery, IEnumerable<CategoryDto>>
+internal sealed class GetCategoriesQueryHandlerHandler(ICategoryService service) : IRequestHandler<GetCategoriesQuery, PagedList<CategoryDto>>
 {
     /// <inheritdoc />
-    public async Task<IEnumerable<CategoryDto>> Handle(GetCategoriesQuery request, CancellationToken cancellationToken)
+    public async Task<PagedList<CategoryDto>> Handle(GetCategoriesQuery request, CancellationToken cancellationToken)
     {
         return await service.ListAsync(request, cancellationToken);
     }
