# TrackIt.Application/Features/PlannedPayments/Queries/GetPlannedPaymentQueryHandler.cs
@@ -1,4 +1,5 @@
 using MediatR;
+using TrackIt.Application.DTOs;
 using TrackIt.Application.DTOs.PlannedPayments;
 using TrackIt.Application.Interfaces;
 
@@ -7,10 +8,10 @@ namespace TrackIt.Application.Features.PlannedPayments.Queries;
 /// <summary>
 ///     Обработчик запроса <see cref="GetPlannedPaymentQuery" />
 /// </summary>
-internal sealed class GetPlannedPaymentQueryHandler(IPlannedPaymentService service) : IRequestHandler<GetPlannedPaymentQuery, IEnumerable<PlannedPaymentDto>>
+internal sealed class GetPlannedPaymentQueryHandler(IPlannedPaymentService service) : IRequestHandler<GetPlannedPaymentQuery, PagedList<PlannedPaymentDto>>
 {
     /// <inheritdoc />
-    public async Task<IEnumerable<PlannedPaymentDto>> Handle(GetPlannedPaymentQuery request, CancellationToken cancellationToken)
+    public async Task<PagedList<PlannedPaymentDto>> Handle(GetPlannedPaymentQuery request, CancellationToken cancellationToken)
     {
         return await service.ListAsync(request, cancellationToken);
     }
