# TrackIt.Application/Features/Transactions/Queries/GetTransactionsQueryHandler.cs
@@ -1,4 +1,5 @@
 using MediatR;
+using TrackIt.Application.DTOs;
 using TrackIt.Application.DTOs.Transactions;
 using TrackIt.Application.Interfaces;
 
@@ -7,10 +8,10 @@ namespace TrackIt.Application.Features.Transactions.Queries;
 /// <summary>
 ///     Обработчик запроса <see cref="GetTransactionsQuery"/>.
 /// </summary>
-internal sealed class GetTransactionsQueryHandler(ITransactionService service) : IRequestHandler<GetTransactionsQuery, IEnumerable<TransactionDto>>
+internal sealed class GetTransactionsQueryHandler(ITransactionService service) : IRequestHandler<GetTransactionsQuery, PagedList<TransactionDto>>
 {
     /// <inheritdoc />
-    public async Task<IEnumerable<TransactionDto>> Handle(GetTransactionsQuery request, CancellationToken cancellationToken)
+    public async Task<PagedList<TransactionDto>> Handle(GetTransactionsQuery request, CancellationToken cancellationToken)
     {
         return await service.ListAsync(request, cancellationToken);
     }
